fix: normalize guide text output for S3 files